@@ -50,4 +50,6 @@
     <string name="exported_event_description">Exported from Plees Tracker</string>
     <string name="exported_event_title" translatable="false">Plees Tracker Sleep</string>
     <string name="exported_items">Export complete</string>
+    <string name="settings_category_backup">Backup</string>
+    <string name="settings_automatic_backup">Automatic backup</string>
 </resources>
